# MyLite

./: .gitignore  AUTOCOMPLETE_FEATURE.md  BUILD_RECOVERY_GUIDE.md  BUILD_SETUP.md  FEATURE_VALIDATION.md  GO_STRUCT_GENERATION.md  GO_STRUCT_IMPLEMENTATION.md  GO_STRUCT_TEST_GUIDE.md  I18N_IMPLEMENTATION.md  I18N_QUICK_REFERENCE.md  I18N_SCHEMA_BROWSER_COMPLETE.md  I18N_SETUP.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  Makefile  PERFORMANCE_TEST.md  PHASE3_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SAVE_QUERY_FEATURE.md  SSH_SSL_HTTP_IMPLEMENTATION.md  TESTING_STRUCTURE_FEATURES.md  build.sh  index.html  package-lock.json  package.json  tailwind.config.js  verify-code.sh  verify-ssh-feature.sh  vite.config.ts
.github/workflows/: release.yml
.roles/: developer.md  product-manager.md  project-manager.md  tester.md  ui-designer.md
scripts/: release.sh  sync-version.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/default/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib_test.rs  main.rs
src-tauri/src/commands/: connection.rs  export.rs  mod.rs  query.rs  query_analyzer.rs  query_history.rs  schema.rs
src-tauri/src/db/: connection.rs  mod.rs  ssh_tunnel.rs
src-tauri/src/models/: connection.rs  mod.rs  query.rs  schema.rs
src-tauri/tests/: integration_test.rs
src/components/: ColumnEditorDialog.tsx  ConnectionDialog.tsx  ConnectionGroupManager.tsx  CreateTableDialog.tsx  DatabasePropertiesDialog.tsx  DatabaseWorkspace.tsx  DesignTableDialog.tsx  GlobalSearch.tsx  ImportExportDialog.tsx  IndexEditorDialog.tsx  KeyboardShortcutsHelp.tsx  LanguageToggle.tsx  QueryHistory.tsx  QueryResult.tsx  QuickConnect.tsx  SQLEditor.tsx  SaveQueryDialog.tsx  SchemaBrowser.tsx  StructureDialog.tsx  TableDDLDialog.tsx  TableDataView.tsx  TablePropertiesDialog.tsx  TableStructureView.tsx  ThemeToggle.tsx  Toast.tsx  VirtualTable.tsx  WelcomePage.tsx  ui-states.tsx
src/hooks/: use-pagination.tsx  use-toast.ts  useKeyboardShortcuts.ts  usePaginatedQuery.ts  useTheme.ts  (+2 more)
(+12 files in other folders)
