[package]
name = "mylite"
version = "1.1.0"
description = "MyLite Desktop App"
authors = ["sky"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "io-util", "net"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "chrono", "rust_decimal"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde"] }
anyhow = "1.0"
hex = "0.4"
thiserror = "1.0"
dirs = "5.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
# SSH tunnel support
russh = "0.45"
russh-keys = "0.45"
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
native-tls = "0.2"
async-trait = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
